Days/desafios/day-13/app/giropops-senhas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  giropops-senhas-deployment
  labels:
    app:  giropops-senhas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops-senhas-deployment
  template:
    metadata:
      labels:
        app: giropops-senhas-deployment
    spec:
      containers:
      - name:  giropops-senhas
        image:  israeldoamaral/linuxtips-giropops-senhas:1.0
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.5"
            memory: "128Mi"
          limits:
            cpu: "1.0"
            memory: 256Mi
