Days/desafios/day-13/app/giropops-senhas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas-service
spec:
  selector:
    app: giropops-senhas-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: tcp-app
  type: ClusterIP
